Controle de Veiculo

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=admin
 
+AD_USER=dominio\\usuario
+AD_PASSWORD=senha@1234
+
 # Add other environment variables here as needed
 # DEBUG=True
 # SECRET_KEY=your-secret-key
