--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=admin
 
-AD_USER=dominio\\usuario
-AD_PASSWORD=senha@1234
+AD_USER=jfgo\\exemplo_svc_control_frota
+AD_PASSWORD=jfgo@1234
 
 # Add other environment variables here as needed
 # DEBUG=True
